--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,30 +1,39 @@
+body{	
+	min-height: 1000px;
+	font-family: "Microsoft YaHei"!important;
+}
 .container-1200{
 	width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 }
 nav .nav-header{
-	background-color: #f8f8f8;
+	background-color: #fff;
 	height: 80px;
 	overflow: hidden;
 }
 .nav-header .nav-bar a{
-	display: block;
+	display: inline-block;
 	margin-top: 21px;
 }
 
 .bodyer {
-	background: url('../images/login_banner_1.jpg') no-repeat center top;
-	.bg{		
+	// background: url('../images/login_banner_1.jpg') no-repeat center top;
+	position: relative;
+	min-width: 1200px;
+	.part-form{		
 		height: 500px;
-		position: relative;
+		position: absolute;
+		top: 4px;
+		left: 50%;
+		margin-left: -600px;
 		form{
 			padding: 20px 0px 0px;
-			max-height: 388px;
+			// max-height: 388px;
 			width: 347px;
 			background-color: #fff;
 			float: right;
-			margin-right: 00px;
+			margin-right: 20px;
 			margin-top: 60px;
 			.title{
 				// font-weight: bold;
@@ -79,7 +88,7 @@ nav .nav-header{
 					p{
 						border:1px solid #e5e5e5;
 						padding: 6px 10px;
-						margin-bottom: 20px;
+						margin-bottom: 27px;
 						input{
 							height: 30px;
 							outline: none;
@@ -103,6 +112,7 @@ nav .nav-header{
 						p{
 							width: 170px;
 							float: left;
+							margin-bottom: 0px;
 							input{
 								width: 150px;
 							}
@@ -115,11 +125,32 @@ nav .nav-header{
 								outline: none;
 								color: #0084cf;
 								background-color: #f2f2f1;
-								border: 1px solid #cdcdcd;
+								border: none;
 								opacity: 0.8;
+								height: 44px;
+							}
+							button.state{
+								color: #fff;
+								background-color: #0084cf;
 							}
 						}
 					}
+				}
+				.note{
+					padding: 5px 20px;
+					color: red;
+					font-size: 12px;
+					// visibility: hidden; //visible
+					i{
+						display: inline-block;
+						background-image: url(../images/error.png);
+						height: 14px;
+						width: 14px;
+						vertical-align: middle;
+						margin-top: -3px;
+						margin-right: 3px;
+					}
+
 				}
 				.forget-password{
 					overflow: hidden;
@@ -197,9 +228,9 @@ nav .nav-header{
 	}
 }
 footer{
-	padding: 25px 0;
+	// padding: 25px 0;
 	.customer-hotline{
-		padding-right: 348px;
+		// padding-right: 348px;
 		.item1,.item2{
 			text-align: center;
 			color: #666;
@@ -221,16 +252,44 @@ footer{
 				display: inline-block;
 				position: relative;
 				a{
-					text-decoration: underline;
+					text-decoration: none;
 				}
-				img{
+				.app-code{
 					display: none;
 					position: absolute;
-					bottom: 20px;
-					left: -50px;
+					top: 25px;
+					left: 40px;					
+					span{
+						// width: 0;
+						// height: 0;
+						display: block;
+						// border-color: transparent;
+						// border-width: 10px;
+						// border-style: solid;
+						// border-bottom-color: #666;
+						// border-bottom-width: 12px;
+						// vertical-align: bottom;
+						// margin-left: 5px;
+						height: 24px;
+						width: 24px;
+						transform: rotateZ(45deg);
+						background-color: #fff;
+						box-shadow: 0 0 6px #999;
+						// margin-bottom: -10px; 
+						margin: 0 0 -12px 30px;
+
+					}
+					img{
+						position: relative;
+						// display: block;
+						font-size: 0;
+						padding: 5px;
+						box-shadow: 0 3px 6px #999;
+						background-color: #fff;
+					}
 				}
 			}
-			.qr-code:hover img{
+			.qr-code:hover .app-code{
 				display: block;
 			}
 		}
