glob获取pages多文件夹文件

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -15,6 +15,17 @@ nav .nav-header{
 .nav-header .nav-bar a{
 	display: inline-block;
 	margin-top: 21px;
+	&:hover{
+		text-decoration: none;
+	}
+	span{
+		// color: #0085d0;
+		color: #009ed0;
+		display: inline-block;
+		vertical-align: bottom;
+		margin-bottom: 6px;
+		font-size: 16px;
+	}
 }
 
 .bodyer {
