--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,1 +1,315 @@
-body{min-height:1000px;font-family:"Microsoft YaHei"!important}.container-1200{width:1200px;margin-left:auto;margin-right:auto}nav .nav-header{background-color:#fff;height:80px;overflow:hidden}.nav-header .nav-bar a{display:inline-block;margin-top:21px}.bodyer{position:relative;min-width:1200px}.bodyer .part-form{height:500px;position:absolute;top:4px;left:50%;margin-left:-600px}.bodyer .part-form form{padding:20px 0 0;width:347px;background-color:#fff;float:right;margin-right:20px;margin-top:60px}.bodyer .part-form form .title{padding:0 20px}.bodyer .part-form form .title .item{font-size:16px;color:#aaa;padding:14px 0;width:130px;text-align:center;border-bottom:3px solid #fff;cursor:pointer}.bodyer .part-form form .title .protal-login-title{float:left;border-bottom-color:#0084cf;color:#0084cf}.bodyer .part-form form .title .he-login-title{float:right}.bodyer .part-form form .item-title-border-bottom-wrap{padding:0 20px;position:relative}.bodyer .part-form form .item-title-border-bottom-wrap .item-title-border-bottom{position:absolute;bottom:0;z-index:0;display:none;width:130px;height:3px;background-color:#0084cf}.bodyer .part-form form .border-bottom{width:100%;height:1px;background-color:#f2f2f2}.bodyer .part-form form .part{display:none}.bodyer .part-form form .part .input{padding:20px 20px 0}.bodyer .part-form form .part .input p{border:1px solid #e5e5e5;padding:6px 10px;margin-bottom:27px}.bodyer .part-form form .part .input p input{height:30px;outline:0;border:none;opacity:.6;width:100%}.bodyer .part-form form .part .input .verification_code p{width:170px;float:left;margin-bottom:0}.bodyer .part-form form .part .input .verification_code p input{width:150px}.bodyer .part-form form .part .input .verification_code .code-button{line-height:38px;float:right}.bodyer .part-form form .part .input .verification_code .code-button button{width:108px;outline:0;color:#0084cf;background-color:#f2f2f1;border:none;opacity:.8;height:44px}.bodyer .part-form form .part .input .verification_code .code-button button.state{color:#fff;background-color:#0084cf}.bodyer .part-form form .part .note{padding:5px 20px;color:red;font-size:12px}.bodyer .part-form form .part .note i{display:inline-block;background-image:url(../images/error.png);height:14px;width:14px;vertical-align:middle;margin-top:-3px;margin-right:3px}.bodyer .part-form form .part .forget-password{overflow:hidden;margin-top:20px;padding:10px 20px;font-size:14px}.bodyer .part-form form .part .forget-password a{cursor:pointer;color:#0084cf;margin-bottom:10px}.bodyer .part-form form .part .submit-btn{padding:0 20px}.bodyer .part-form form .part .submit-btn button.btn{background-color:#0084cf;border-radius:0;width:100%;color:#fff;font-weight:700;padding:8px 12px}.bodyer .part-form form .part .submit-btn button:hover{color:#fff}.bodyer .part-form form .protal-login{display:block}.bodyer .part-form form .protal-login .forget-password{padding-top:0}.bodyer .part-form form .protal-login .forget-password a{float:right}.bodyer .part-form form .he-login .forget-password{border-top:1px solid #e5e5e5;background-color:#f2f2f2;text-align:center;font-size:12px;color:#87b642}.bodyer .part-form form .register .forget-password{border-top:1px solid #e5e5e5}.bodyer .part-form form .register .forget-password h5{color:#87b642}.bodyer .part-form form .register .forget-password span{margin-right:8px;color:#999}.bodyer .part-form .bg-circle{position:absolute;top:460px;left:50%}.bodyer .part-form .bg-circle p{height:20px;width:20px;border-radius:50%;border:2px solid #aaa;background-color:#aaa;display:inline-block;margin-left:10px;cursor:pointer;opacity:.7}footer .customer-hotline .item1,footer .customer-hotline .item2{text-align:center;color:#666;padding-bottom:8px}footer .customer-hotline .item1 i,footer .customer-hotline .item2 i{display:inline-block;width:3px;height:16px;vertical-align:middle;background-color:#ccc;margin:0 6px}footer .customer-hotline .item1 .phone-number{display:inline-block}footer .customer-hotline .item1 .qr-code{display:inline-block;position:relative}footer .customer-hotline .item1 .qr-code a{text-decoration:none}footer .customer-hotline .item1 .qr-code .app-code{display:none;position:absolute;top:25px;left:40px}footer .customer-hotline .item1 .qr-code .app-code span{display:block;height:24px;width:24px;transform:rotateZ(45deg);background-color:#fff;box-shadow:0 0 6px #999;margin:0 0 -12px 30px}footer .customer-hotline .item1 .qr-code .app-code img{position:relative;font-size:0;padding:5px;box-shadow:0 3px 6px #999;background-color:#fff}footer .customer-hotline .item1 .qr-code:hover .app-code{display:block}footer .customer-hotline .item2 i{width:2px;margin:0 1px;height:14px}
+body {
+    min-height: 1000px;
+    font-family: "Microsoft YaHei"!important
+}
+
+.container-1200 {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto
+}
+
+nav .nav-header {
+    background-color: #fff;
+    height: 80px;
+    overflow: hidden
+}
+
+.nav-header .nav-bar a {
+    display: inline-block;
+    margin-top: 21px
+}
+
+.nav-header .nav-bar a:hover {
+    text-decoration: none
+}
+
+.nav-header .nav-bar a span {
+    color: #009ed0;
+    display: inline-block;
+    vertical-align: bottom;
+    margin-bottom: 6px;
+    margin-left: 12px;
+    font-size: 16px
+}
+
+.bodyer {
+    position: relative;
+    min-width: 1200px
+}
+
+.bodyer .part-form {
+    height: 500px;
+    position: absolute;
+    top: 4px;
+    left: 50%;
+    margin-left: -600px
+}
+
+.bodyer .part-form form {
+    padding: 20px 0 0;
+    width: 347px;
+    background-color: #fff;
+    float: right;
+    margin-right: 20px;
+    margin-top: 60px
+}
+
+.bodyer .part-form form .title {
+    padding: 0 20px
+}
+
+.bodyer .part-form form .title .item {
+    font-size: 16px;
+    color: #aaa;
+    padding: 14px 0;
+    width: 130px;
+    text-align: center;
+    border-bottom: 3px solid #fff;
+    cursor: pointer
+}
+
+.bodyer .part-form form .title .protal-login-title {
+    float: left;
+    border-bottom-color: #0084cf;
+    color: #0084cf
+}
+
+.bodyer .part-form form .title .he-login-title {
+    float: right
+}
+
+.bodyer .part-form form .item-title-border-bottom-wrap {
+    padding: 0 20px;
+    position: relative
+}
+
+.bodyer .part-form form .item-title-border-bottom-wrap .item-title-border-bottom {
+    position: absolute;
+    bottom: 0;
+    z-index: 0;
+    display: none;
+    width: 130px;
+    height: 3px;
+    background-color: #0084cf
+}
+
+.bodyer .part-form form .border-bottom {
+    width: 100%;
+    height: 1px;
+    background-color: #f2f2f2
+}
+
+.bodyer .part-form form .part {
+    display: none
+}
+
+.bodyer .part-form form .part .input {
+    padding: 20px 20px 0
+}
+
+.bodyer .part-form form .part .input p {
+    border: 1px solid #e5e5e5;
+    padding: 6px 10px;
+    margin-bottom: 27px
+}
+
+.bodyer .part-form form .part .input p input {
+    height: 30px;
+    outline: 0;
+    border: none;
+    opacity: .6;
+    width: 100%
+}
+
+.bodyer .part-form form .part .input .verification_code p {
+    width: 170px;
+    float: left;
+    margin-bottom: 0
+}
+
+.bodyer .part-form form .part .input .verification_code p input {
+    width: 150px
+}
+
+.bodyer .part-form form .part .input .verification_code .code-button {
+    line-height: 38px;
+    float: right
+}
+
+.bodyer .part-form form .part .input .verification_code .code-button button {
+    width: 108px;
+    outline: 0;
+    color: #0084cf;
+    background-color: #f2f2f1;
+    border: none;
+    opacity: .8;
+    height: 44px
+}
+
+.bodyer .part-form form .part .input .verification_code .code-button button.state {
+    color: #fff;
+    background-color: #0084cf
+}
+
+.bodyer .part-form form .part .note {
+    padding: 5px 20px;
+    color: red;
+    font-size: 12px
+}
+
+.bodyer .part-form form .part .note i {
+    display: inline-block;
+    background-image: url(../images/error.png);
+    height: 14px;
+    width: 14px;
+    vertical-align: middle;
+    margin-top: -3px;
+    margin-right: 3px
+}
+
+.bodyer .part-form form .part .forget-password {
+    overflow: hidden;
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 14px
+}
+
+.bodyer .part-form form .part .forget-password a {
+    cursor: pointer;
+    color: #0084cf;
+    margin-bottom: 10px
+}
+
+.bodyer .part-form form .part .submit-btn {
+    padding: 0 20px
+}
+
+.bodyer .part-form form .part .submit-btn button.btn {
+    background-color: #0084cf;
+    border-radius: 0;
+    width: 100%;
+    color: #fff;
+    font-weight: 700;
+    padding: 8px 12px
+}
+
+.bodyer .part-form form .part .submit-btn button:hover {
+    color: #fff
+}
+
+.bodyer .part-form form .protal-login {
+    display: block
+}
+
+.bodyer .part-form form .protal-login .forget-password {
+    padding-top: 0
+}
+
+.bodyer .part-form form .protal-login .forget-password a {
+    float: right
+}
+
+.bodyer .part-form form .he-login .forget-password {
+    border-top: 1px solid #e5e5e5;
+    background-color: #f2f2f2;
+    text-align: center;
+    font-size: 12px;
+    color: #87b642
+}
+
+.bodyer .part-form form .register .forget-password {
+    border-top: 1px solid #e5e5e5
+}
+
+.bodyer .part-form form .register .forget-password h5 {
+    color: #87b642
+}
+
+.bodyer .part-form form .register .forget-password span {
+    margin-right: 8px;
+    color: #999
+}
+
+.bodyer .part-form .bg-circle {
+    position: absolute;
+    top: 460px;
+    left: 50%
+}
+
+.bodyer .part-form .bg-circle p {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 2px solid #aaa;
+    background-color: #aaa;
+    display: inline-block;
+    margin-left: 10px;
+    cursor: pointer;
+    opacity: .7
+}
+
+footer .customer-hotline .item1,
+footer .customer-hotline .item2 {
+    text-align: center;
+    color: #666;
+    padding-bottom: 8px
+}
+
+footer .customer-hotline .item1 i,
+footer .customer-hotline .item2 i {
+    display: inline-block;
+    width: 3px;
+    height: 16px;
+    vertical-align: middle;
+    background-color: #ccc;
+    margin: 0 6px
+}
+
+footer .customer-hotline .item1 .phone-number {
+    display: inline-block
+}
+
+footer .customer-hotline .item1 .qr-code {
+    display: inline-block;
+    position: relative
+}
+
+footer .customer-hotline .item1 .qr-code a {
+    text-decoration: none
+}
+
+footer .customer-hotline .item1 .qr-code .app-code {
+    display: none;
+    position: absolute;
+    top: 25px;
+    left: 40px
+}
+
+footer .customer-hotline .item1 .qr-code .app-code span {
+    display: block;
+    height: 24px;
+    width: 24px;
+    transform: rotateZ(45deg);
+    background-color: #fff;
+    box-shadow: 0 0 6px #999;
+    margin: 0 0 -12px 30px
+}
+
+footer .customer-hotline .item1 .qr-code .app-code img {
+    position: relative;
+    font-size: 0;
+    padding: 5px;
+    box-shadow: 0 3px 6px #999;
+    background-color: #fff
+}
+
+footer .customer-hotline .item1 .qr-code:hover .app-code {
+    display: block
+}
+
+footer .customer-hotline .item2 i {
+    width: 2px;
+    margin: 0 1px;
+    height: 14px
+}
